# climgal

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/climgal/: main.cpp
